--- a/client/src/app/plants/plant-list.component.html
+++ b/client/src/app/plants/plant-list.component.html
@@ -20,11 +20,25 @@
         color: white;
     }
 </style>
-<body>
 
 <h1>Digital Display Garden </h1>
 
-<div class="vertical-menu" >
-    <a href="#" class="active">Home</a>
-    <a href = "#" *ngFor="let location of locations" value ="{location._id}">{{location._id}}</a>
-</div>
+<ul class="list-group">
+
+    <select id="locationDropdown" (change)="populateFlowers()">
+        <option value="">Select Bed</option>
+        <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
+    </select>
+
+    <li class="list-group-item list-group-item-info">
+        <span >Plants</span>
+    </li>
+
+    <li *ngFor="let plant of plants | filterBy: {commonName: searchCommonName} " class="list-group-item">
+        {{"Common Name: " + plant.commonName}} <br>
+        {{"Cultivar: " +  plant.cultivar}} <br>
+        {{"Garden Location: " + plant.gardenLocation}}
+
+    </li>
+
+</ul>
