--- a/client/src/app/plants/plant-list.component.html
+++ b/client/src/app/plants/plant-list.component.html
@@ -41,12 +41,11 @@
             {{"Common Name: " + plant.commonName}} <br>
             {{"Cultivar: " +  plant.cultivar}} <br>
             {{"Garden Location: " + plant.gardenLocation}}</button>
-        <dialog-component  [(visible)]="showDialog" *ngFor="let plant of plants">
-             <h1>{{plant.cultivar}} (This is the last flower in the list)</h1>
-            <h2>{{plant.commonName}}<br>Garden Location: {{plant.gardenLocation}}</h2>
-             <button name = {{plant.cultivar}} (click)="showDialog = !showDialog" class="btn">Close</button>
-        </dialog-component>
-
+        <dialog-component  [(visible)]="showDialog">
+        <h1>{{plant.cultivar}} (This is the last flower in the list)</h1>
+        <h2>{{plant.commonName}}<br>Garden Location: {{plant.gardenLocation}}</h2>
+        <button name = {{plant.cultivar}} (click)="showDialog = !showDialog" class="btn">Close</button>
+    </dialog-component>
     </li>
 <!--when the following dialog box is included into the above link, the last flower is shown!-->
 
