--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -1,7 +1,19 @@
-<div *ngIf="plant" class="plant">
-    <ul>
-        <li>Common Name: {{ plant.commonName }}</li>
-        <li>Cultivar: {{ plant.cultivar }}</li>
-        <li>Garden Location: {{ plant.gardenLocation }}</li>
-    </ul>
+<div *ngIf="plant" (plant)="thisPlant" class="plant">
+    <h2>{{plant.cultivar}}</h2>
+    <h2>{{plant.commonName}}<br>Garden Location: {{plant.gardenLocation}}</h2>
+    <button (click)="plant.showDialog = false" class="btn">Close</button>
+
+    <br/>
+    <br/>
+
+    <h3>Leave Feedback for Flower</h3>
+    <div *ngIf="!commented">
+        <textarea [(ngModel)]="commentText" rows="5" wrap="on" style="width: 95%;"></textarea>
+
+        <button type="button" (click)="this.comment(commentText)">Leave a comment</button>
+    </div>
+    <div *ngIf="commented">
+        Your comment has been submitted.
+    </div>
+
 </div>
