Add simple like button
It works, but isn't in the correct spot on the page, and shows no
indication that the like was submitted correctly.

It does prevent multiple likes (unless the user reloads the page).

Issue #6

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -15,5 +15,6 @@
     <div *ngIf="commented">
         Your comment has been submitted.
     </div>
+    <button type="button" (click)="this.ratePlant(true)"><span class="glyphicon glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></button>
 
 </div>
