Add simple dislike button
This has all the same problems as the like button.

Issue #6

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -16,5 +16,6 @@
         Your comment has been submitted.
     </div>
     <button type="button" (click)="this.ratePlant(true)"><span class="glyphicon glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></button>
+    <button type="button" (click)="this.ratePlant(false)"><span class="glyphicon glyphicon glyphicon-thumbs-down" aria-hidden="true"></span></button>
 
 </div>
