--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -15,7 +15,29 @@
     <div *ngIf="commented">
         Your comment has been submitted.
     </div>
-    <button type="button" (click)="this.ratePlant(true)"><span class="glyphicon glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></button>
-    <button type="button" (click)="this.ratePlant(false)"><span class="glyphicon glyphicon glyphicon-thumbs-down" aria-hidden="true"></span></button>
+
+
+    <div *ngIf="rating === null">
+        <button type="button" (click)="this.ratePlant(true)" style="border: none; background: inherit; outline: none;">
+            <span class="glyphicon glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+        </button>
+        <button type="button" (click)="this.ratePlant(false)" style="border: none; background: inherit; outline: none;">
+            <span class="glyphicon glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+        </button>
+    </div>
+
+    <div *ngIf="rating === true">
+        <button type="button" style="border: none; background: inherit; outline: none;" class = text-success>
+            <span class="glyphicon glyphicon glyphicon-thumbs-up " aria-hidden="true"></span>
+            Liked!
+        </button>
+    </div>
+
+    <div *ngIf="rating === false">
+        <button type="button" style="border: none; background: inherit; outline: none;" class = text-success>
+            <span class="glyphicon glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+            Disliked!
+        </button>
+    </div>
 
 </div>
