--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -16,32 +16,32 @@
         <br/>
     </span>
 
+    <div style="padding-top: 0.3em">
+        <span *ngIf="rating === null">
+            <button type="button" (click)="this.ratePlant(true)" style="border: none; background: inherit; outline: none;">
+                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+            </button>
+            <button type="button" (click)="this.ratePlant(false)" style="border: none; background: inherit; outline: none;">
+                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+            </button>
+        </span>
 
-    <span *ngIf="rating === null">
-        <button type="button" (click)="this.ratePlant(true)" style="border: none; background: inherit; outline: none;">
-            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-        </button>
-        <button type="button" (click)="this.ratePlant(false)" style="border: none; background: inherit; outline: none;">
-            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-        </button>
-    </span>
+        <span *ngIf="rating === true">
+            <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
+                <span class="glyphicon glyphicon-thumbs-up " aria-hidden="true"></span>
+                Liked!
+            </button>
+        </span>
 
-    <span *ngIf="rating === true">
-        <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
-            <span class="glyphicon glyphicon-thumbs-up " aria-hidden="true"></span>
-            Liked!
-        </button>
-    </span>
+        <span *ngIf="rating === false">
+            <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
+                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                Disliked!
+            </button>
+        </span>
 
-    <span *ngIf="rating === false">
-        <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
-            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-            Disliked!
-        </button>
-    </span>
-
-    <span *ngIf="!commented">
-        <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
-    </span>
-
+        <span *ngIf="!commented">
+            <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
+        </span>
+    </div>
 </div>
