--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -1,7 +1,6 @@
-<div *ngIf="plant" (plant)="thisPlant" class="plant">
+<div class="plant">
     <h2>{{plant.cultivar}}</h2>
     <h2>{{plant.commonName}}</h2>
-    <button (click)="plant.showDialog = false" class="btn" style="float: right">Close</button>
 
     <br/>
     <br/>
@@ -15,5 +14,5 @@
     <div *ngIf="commented">
         Your comment has been submitted.
     </div>
-
+    <button class="btn" style="float: right">Close</button>
 </div>
