--- a/client/src/app/plants/plant-list.component.html
+++ b/client/src/app/plants/plant-list.component.html
@@ -12,7 +12,8 @@
     </li>
 
     <li *ngFor="let plant of plants" class="list-group-item">
-
+    <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
+    <!--See app.routes.ts-->
         <button [routerLink]="['/plants', plant.id]" class="btn btn-link btn-block" >
             {{"Cultivar: " +  plant.cultivar}}<br>
             {{"Common Name: " + plant.commonName}}</button>
