--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -43,5 +43,5 @@
             <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
         </span>
     </div>
-    <button class="btn" style="float: right">Close</button>
+    <button class="btn" style="float: right">Back</button>
 </div>
