Display user feedback on client side

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -44,4 +44,10 @@
         </span>
     </div>
     <button class="btn" style="float: right">Back</button>
+
+   <div>Plant Feedback:
+    {{plantFeedback.commentCount}}
+    {{plantFeedback.likeCount}}
+    {{plantFeedback.dislikeCount}}
+   </div>
 </div>
