added link from admin page to export page
issue #1

--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -1,1 +1,5 @@
-"hello admin"
+<h2>Administrator Tasks</h2>
+
+<button type="button" [routerLink]="['/admin/exportData']"  >
+    Export Collected Data
+</button>
