--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -1,4 +1,4 @@
-<div class="plant">
+<div class="plant" >
     <h2>{{plant.cultivar}}</h2>
     <h3>{{plant.commonName}}</h3>
 
@@ -17,25 +17,25 @@
 
     <div style="padding-top: 0.3em">
         <span *ngIf="rating === null">
-            <button type="button" (click)="this.ratePlant(true)" style="border: none; background: inherit; outline: none;">
-                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+            <button type="button" (click)="this.ratePlant(true)" style="border: none; background: inherit; outline: none;font-size:20px">
+                <span  class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
                 {{plantFeedback.likeCount}}
             </button>
-            <button type="button" (click)="this.ratePlant(false)" style="border: none; background: inherit; outline: none;">
+            <button type="button" (click)="this.ratePlant(false)" style="border: none; background: inherit; outline: none;font-size:20px">
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
                 {{plantFeedback.dislikeCount}}
             </button>
         </span>
 
         <span *ngIf="rating === true">
-            <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
+            <button type="button" style="border: none; background: inherit; outline: none;font-size:20px" class="text-success" >
                 <span class="glyphicon glyphicon-thumbs-up " aria-hidden="true"></span>
                 Liked! <span class="label label-default">{{plantFeedback.likeCount}}</span>
             </button>
         </span>
 
         <span *ngIf="rating === false">
-            <button type="button" style="border: none; background: inherit; outline: none;" class="text-success">
+            <button type="button" style="border: none; background: inherit; outline: none;font-size:20px" class="text-success">
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
                 Disliked <span class="label label-default">{{plantFeedback.dislikeCount}}</span>
 
@@ -46,9 +46,13 @@
             <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
         </span>
     </div>
-    <button class="btn" style="float: right">Back</button>
+
 
    <div>
        {{plantFeedback.commentCount}} people have left feedback on this plant
    </div>
+    <br/>
+    <br/>
+    <br/>
+    <button class="btn" style="float: right">Back</button>
 </div>
