--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,11 +7,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" [routerLink]="['/']">Angular Spark Demo</a>
+            <a class="navbar-brand" [routerLink]="['/']">Digital Display Garden</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/']">Home</a></li>
+                <li><a [routerLink]="['/']">Plant List</a></li>
             </ul>
         </div>
     </div>
