Adds color, removes navbar

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
-<navbar-component></navbar-component>
-
-<div class="container">
-    <router-outlet></router-outlet>
+<div>
+    <!--<navbar-component></navbar-component> TODO: ADD TO ADMIN -->
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
