--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -1,19 +1,18 @@
-<div class="plant" >
+<div class="plant">
     <h2>{{plant.cultivar}}</h2>
     <h3>{{plant.commonName}}</h3>
 
     <br/>
-    <br/>
 
     <h3>Leave Feedback for Flower</h3>
     <span *ngIf="!commented">
-        <textarea [(ngModel)]="commentText" rows="5" wrap="on" style="width: 100%;"></textarea>
+        <textarea [(ngModel)]="commentText" rows="5" wrap="on" style="resize:vertical;width: 100%;"></textarea>
 
     </span>
     <span *ngIf="commented" >
         <br/>
         &ensp; <!--Makes the following text indented, &ensp; is whitespace-->
-        <span style="font-size:18px;color:#008119;background-color:#d6ebd6">
+        <span style="font-size:18px;color:#008119;background-color:#54ff98">
             <strong>Your feedback has been submitted.</strong>
         </span>
         <br/>
@@ -48,7 +47,7 @@
         </span>
 
         <span *ngIf="!commented">
-            <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
+            <button type="button" (click)="this.comment(commentText)" style="float: right">Submit feedback</button>
         </span>
     </div>
 
@@ -59,5 +58,5 @@
     <br/>
     <br/>
     <br/>
-    <button class="btn" style="float: right">Back</button>
+    <button type="button" style="float: right">Back</button>
 </div>
