--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,19 +1,15 @@
-<h1>Digital Display Garden </h1>
+<h2>Digital Display Garden </h2>
+<h3>Bed {{bed}} </h3>
 
 <ul class="list-group">
-
-    <select id="locationDropdown" (change)="populateFlowers()">
-        <option value="">Select Bed</option>
-        <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
-    </select>
 
     <li class="list-group-item list-group-item-info">
         <span >Flowers</span>
     </li>
 
     <li *ngFor="let plant of plants" class="list-group-item">
-    <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
-    <!--See app.routes.ts-->
+        <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
+        <!--See app.routes.ts-->
         <button [routerLink]="['/plants', plant.id]" class="btn btn-link btn-block" >
             {{"Cultivar: " +  plant.cultivar}}<br>
             {{"Common Name: " + plant.commonName}}</button>
