Add back button functionality
button now routes back to newly made bed pages

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -46,8 +46,9 @@
             <button type="button" (click)="this.comment(commentText)" style="float: right">Submit comment</button>
         </span>
     </div>
-    <button class="btn" style="float: right">Back</button>
-
+    <span *ngIf="srcBed !== null">
+        <button  [routerLink] ="['/bed', srcBed]" class="btn" style="float: right">Back</button>
+    </span>
    <div>
        {{plantFeedback.commentCount}} people have left feedback on this plant
    </div>
