--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -10,7 +10,7 @@
     <li *ngFor="let plant of plants" class="list-group-item">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
         <!--See app.routes.ts-->
-        <button [routerLink]="['/plants', plant.id]" class="btn btn-link btn-block" >
+        <button [routerLink]="['/plants', plant.id, {srcBed:bed}]" class="btn btn-link btn-block" >
             {{"Cultivar: " +  plant.cultivar}}<br>
             {{"Common Name: " + plant.commonName}}</button>
 
