--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -1,7 +1,19 @@
-Exported Data
 <ul>
-    <li *ngFor="let uploadId of uploadIds">
-        {{ uploadId }}
-        <a [attr.href]="this.url + uploadId">Download Feedback</a>
+    <li class="row list-group-item">
+        <div class="col-sm-2">
+            Data Set
+        </div>
+    </li>
+    <li *ngFor="let uploadId of uploadIds" class="row list-group-item">
+
+        <div class="col-sm-2">
+            {{ uploadId }}
+        </div>
+        <div class="col-sm-4">
+            <a [attr.href]="this.url + uploadId">
+                <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                Download feedback for this data set
+            </a>
+        </div>
     </li>
 </ul>
