created an import spreadsheet
Issue #1

--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -3,3 +3,7 @@
 <button type="button" [routerLink]="['/admin/exportData']"  >
     Export Collected Data
 </button>
+
+<button type="button" [routerLink]="['/admin/importData']">
+    Import Spreadsheet
+</button>
