Created a footer that is placed at bottom problems with alligning and placing on plant list page
issue #13

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -59,4 +59,8 @@
     <br/>
     <br/>
     <button type="button" style="float: right">Back</button>
+
+    <footer style="position:absolute; bottom:0; width:100%; height:60px">
+        <p>Contact Information</p>
+    </footer>
 </div>
