--- a/client/src/app/plants/plant-list.component.html
+++ b/client/src/app/plants/plant-list.component.html
@@ -1,5 +1,6 @@
 <h1>Digital Display Garden </h1>
 
+
 <ul class="list-group">
 
     <select id="locationDropdown" (change)="populateFlowers()">
@@ -11,6 +12,10 @@
         <span >Plants</span>
     </li>
 
+    <footer style="position:absolute; bottom:0; width:100%; height:60px">
+        <p>Contact Information</p>
+    </footer>
+
     <li *ngFor="let plant of plants" class="list-group-item">
     <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
     <!--See app.routes.ts-->
@@ -21,3 +26,5 @@
     </li>
 
 </ul>
+
+
