Shorten feedback response on plant page for mobile users

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -53,7 +53,7 @@
 
 
    <div>
-       {{plantFeedback.commentCount}} people have left feedback on this plant
+       {{plantFeedback.commentCount}} people have left feedback
    </div>
     <br/>
     <br/>
