--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -2,6 +2,6 @@
 
 
 <button (click)="this.handleUpload()" style="margin-top: 10px">Import</button>
-
+<!-- todo clear the  status message when they go to upload again. -->
 <div *ngIf="filename!==undefined">Your file was successfully uploaded as data set {{this.filename}}.</div>
 <div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
