Added footer to flower and main pages Don't have bed component cleaned up some styling
issue #13

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -12,7 +12,7 @@
     <span *ngIf="commented" >
         <br/>
         &ensp; <!--Makes the following text indented, &ensp; is whitespace-->
-        <span style="font-size:18px;color:#008119;background-color:#54ff98">
+        <span style="font-size:18px;color:#008119">
             <strong>Your feedback has been submitted.</strong>
         </span>
         <br/>
@@ -60,7 +60,8 @@
     <br/>
     <button type="button" style="float: right">Back</button>
 
-    <footer style="position:absolute; bottom:0; width:100%; height:60px">
-        <p>Contact Information</p>
+    <footer style="position:absolute; bottom:0; height:60px; text-align:center;">
+        <p>West Central Research and Outreach Center | 46352 State Hwy 329 Morris MN 56267 | Phone: (320) 589-1711 | Fax: (320) 589-4870</p>
     </footer>
+
 </div>
