Added footer to flower and main pages Don't have bed component cleaned up some styling
issue #13

--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -57,7 +57,7 @@
     <br/>
     <br/>
     <br/>
-    <span *ngIf="srcBed !== undefined">
+    <span *ngIf="srcBed !== null">
         <button  [routerLink]="['/bed', srcBed]" class="btn" style="float: right">Back</button>
     </span>
 
