Change styling on bed pages
Issue #13

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,6 @@
 <div>
     <!--<navbar-component></navbar-component> TODO: ADD TO ADMIN -->
     <div class="container">
-        <router-outlet>
-            <footer style="position:absolute; bottom:0; height:60px; text-align:center;">
-                <p>West Central Research and Outreach Center | 46352 State Hwy 329 Morris MN 56267 | Phone: (320) 589-1711 | Fax: (320) 589-4870</p>
-            </footer>
-        </router-outlet>
+        <router-outlet></router-outlet>
     </div>
 </div>
