--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -11,8 +11,8 @@
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
         <!--See app.routes.ts-->
         <button [routerLink]="['/plants', plant.id, {srcBed:bed}]" class="btn btn-link btn-block" >
-            {{"Cultivar: " +  plant.cultivar}}<br>
-            {{"Common Name: " + plant.commonName}}</button>
+            <strong style="font-size:18px">{{plant.cultivar}}</strong><br>
+            {{plant.commonName}}</button>
 
     </li>
 
