Added navbar to admin pages

--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -1,3 +1,5 @@
+<navbar-component></navbar-component>
+
 <h2>Administrator Tasks</h2>
 
 <button type="button" [routerLink]="['/admin/exportData']"  >
