--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -1,3 +1,5 @@
+<navbar-component></navbar-component>
+
 <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
 
 
