Added headers to two pages and added a back button to import page

--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -1,6 +1,8 @@
 <navbar-component></navbar-component>
 
-<ul>
+<h2>Export Feedback</h2>
+
+<ul class="list-group">
     <li class="row list-group-item">
         <div class="col-sm-2">
             Data Set
