--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -1,5 +1,7 @@
 <navbar-component></navbar-component>
 
+<h2>Import Spreadsheet</h2>
+
 <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
 
 
@@ -7,6 +9,8 @@
     <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
     Import
 </button>
-<!-- todo clear the  status message when they go to upload again. -->
-<div *ngIf="filename!==undefined"> Your file was successfully uploaded as data set {{this.filename}}.</div>
+
+<div *ngIf="filename!==undefined"> Your file was successfully uploaded as data set {{this.filename}}.
+<button  [routerLink]="['/admin']" style="float: right">Back to Admin Page</button>
+</div>
 <div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
