Make plant entries on bed page word wrap

--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -7,10 +7,10 @@
         <span >Flowers</span>
     </li>
 
-    <li *ngFor="let plant of plants" class="list-group-item">
+    <li *ngFor="let plant of plants"  class="list-group-item">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
         <!--See app.routes.ts-->
-        <button [routerLink]="['/plants', plant.id, {srcBed:bed}]" class="btn btn-link btn-block" >
+        <button [routerLink]="['/plants', plant.id, {srcBed:bed}]" style="white-space: normal" class="btn btn-link btn-block" >
             <strong style="font-size:18px">{{plant.cultivar}}</strong><br>
             {{plant.commonName}}</button>
 
