--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -2,18 +2,18 @@
 
 <h2>Administrator Tasks</h2>
 
-<button type="button" [routerLink]="['/admin/exportData']"  >
+<button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/exportData']"  >
     <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
     Export Collected Data
 </button>
 
-<button type="button" [routerLink]="['/admin/importData']">
+<button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/importData']">
     <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
     Import Spreadsheet
 </button>
 
 <a [attr.href]="this.url + '/qrcodes'">
-    <button type="button">
+    <button type="button" class="btn btn-primary btn-lg">
         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
         Download QR Codes
     </button>
