Changes buttons in admin to bootstrap buttons.

--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -22,4 +22,4 @@
     </li>
 </ul>
 
-<button  [routerLink]="['/admin']" style="float: right">Back to Admin Page</button>
+<button  [routerLink]="['/admin']" class="btn btn-primary btn-lg" style="float: right">Back to Admin Page</button>
