--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -15,5 +15,5 @@
 <div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
 
 <div>
-<button  [routerLink]="['/admin']" style="float: right">Back to Admin Page</button>
+<button  [routerLink]="['/admin']" class="btn btn-primary" style="float: right">Back to Admin Page</button>
 </div>
