--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,11 +1,19 @@
 <h2>Digital Display Garden </h2>
-<h3>Bed {{bed}} </h3>
+<h3>
+    Bed
+    <select id="locationDropdown" (change)="this.refreshInformation()" [routerLink]="['/bed', bed]" [(ngModel)]=bed>
+        <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
+    </select>
+</h3>
 
 <ul class="list-group">
 
     <li class="list-group-item list-group-item-info">
         <span >Flowers</span>
+
     </li>
+
+
 
     <li *ngFor="let plant of plants"  class="list-group-item">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
