--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,7 +1,7 @@
 <h2>Digital Display Garden </h2>
 <h3>
     Bed
-    <select id="locationDropdown" (change)="this.refreshInformation()" [routerLink]="['/bed', bed]" [(ngModel)]=bed>
+    <select id="locationDropdown" (change)="this.router.navigate(['/bed', this.bed])" [(ngModel)]=bed>
         <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
     </select>
 </h3>
