Add instructions for visitors to use QR-Codes
issue #8

--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -1,7 +1,12 @@
 <h2> Digital Display Garden</h2>
 
 <!--Todo Add instructions :)-->
+
+<h3> See the flowers in a specific bed in two steps using our QR-Codes!</h3>
 <h3> Instructions: </h3>
+<b>Step 1)</b> Open a QR-Code Scanner App on your smartphone.<br/>
+<b>Step 2)</b> Point the camera towards the QR-Code on the sign to scan it.
+
 
 <h3> Check out a bed </h3>
 <!--Bed dropdown list-->
