--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -11,8 +11,9 @@
 <h3> Check out a bed </h3>
 <!--Bed dropdown list-->
 <!--TODO Make the bed options send them to the corresponding bedpage-->
-<select id="locationDropdown" (change)="populateFlowers()">
-    <option value="">Select Bed</option>
+Select Bed
+<select id="locationDropdown" (change)="this.router.navigate(['/bed', this.bed])" [(ngModel)]=bed>
+    <!--<option value="">Select Bed</option>-->
     <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
 </select>
 
