Add garden navigator to homepage and bedpage
Issue: #9

--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,4 +1,5 @@
-<h2>Digital Display Garden </h2>
+<garden-navbar-component></garden-navbar-component>
+
 <h3>
     Bed
     <select id="locationDropdown" (change)="this.router.navigate(['/bed', this.bed])" [(ngModel)]=bed>
