--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -9,16 +9,16 @@
 <b>Step 2)</b> Point the camera towards the QR-Code on the sign to scan it.
 
 
-<h3> Check out a bed </h3>
-<!--Bed dropdown list-->
-<!--TODO Make the bed options send them to the corresponding bedpage-->
-Select Bed
-<select id="locationDropdown" (change)="this.router.navigate(['/bed', this.bed])" [(ngModel)]=bed>
-    <!--<option value="">Select Bed</option>-->
-    <option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>
-</select>
+<!--<h3> Check out a bed </h3>-->
+<!--&lt;!&ndash;Bed dropdown list&ndash;&gt;-->
+<!--&lt;!&ndash;TODO Make the bed options send them to the corresponding bedpage&ndash;&gt;-->
+<!--Select Bed-->
+<!--<select id="locationDropdown" (change)="this.router.navigate(['/bed', this.bed])" [(ngModel)]=bed>-->
+    <!--&lt;!&ndash;<option value="">Select Bed</option>&ndash;&gt;-->
+    <!--<option *ngFor="let location of locations" value="{{location._id}}">{{location._id}}</option>-->
+<!--</select>-->
 
-<h3> Find location of your favorite flower </h3>
-<!--Searchbar that causes a list of flowers that has a commonname equal to the search value-->
-<!--TODO Give the searchbar Funcionality, offer autocomplete to their text?-->
-<input #input type="text" placeholder="Favorite Flower" (input)="searchID = $event.target.value">
+<!--<h3> Find location of your favorite flower </h3>-->
+<!--&lt;!&ndash;Searchbar that causes a list of flowers that has a commonname equal to the search value&ndash;&gt;-->
+<!--&lt;!&ndash;TODO Give the searchbar Funcionality, offer autocomplete to their text?&ndash;&gt;-->
+<!--<input #input type="text" placeholder="Favorite Flower" (input)="searchID = $event.target.value">-->
