Give padding to push down page contents below the navigator
Issue: #9

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,3 +4,9 @@
         <router-outlet></router-outlet>
     </div>
 </div>
+
+<style>
+    .container {
+        padding: 35% 0 0 0;
+    }
+</style>
