Add admin page for deleting data
Issue: #7

--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -18,3 +18,9 @@
         Download QR Codes
     </button>
 </a>
+
+<button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/deleteData']">
+<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+Delete Old Data
+</button>
+
