Change styling on the data deletion button
Issue: #7

--- a/client/src/app/admin/delete.component.html
+++ b/client/src/app/admin/delete.component.html
@@ -14,7 +14,7 @@
             {{ uploadId }}
         </div>
         <div class="col-sm-4">
-            <button (click)="this.delete(uploadId)">
+            <button (click)="this.delete(uploadId)" class="btn-link">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                 Delete this data set
             </button>
